kubernetes/manifests/04-db-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-db
  namespace: retail-app
spec:
  type: ExternalName
  externalName: project-bedrock-mysql.cofeq2eis5an.us-east-1.rds.amazonaws.com
  ports:
    - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  namespace: retail-app
spec:
  type: ExternalName
  externalName: project-bedrock-postgres.cofeq2eis5an.us-east-1.rds.amazonaws.com
  ports:
    - port: 5432
